--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
-    "@vidstack/react": "^1.6.2",
+    "@vidstack/react": "^1.5.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
@@ -24,8 +24,7 @@
     "react-dom": "18.2.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3",
-    "zod": "^3.22.4"
+    "typescript": "5.1.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.17.0",
